[package]
name = "rust"
description = "rust wasm module for deno"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.100"
argon2 = { version = "0.5", default-features = false, features = ['std'] }
getrandom = { version = "0.2", default-features = false, features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
